fixing margin of play controls so they don't overlap with the hashes

--- a/css/visualization_styles.css
+++ b/css/visualization_styles.css
@@ -96,7 +96,7 @@ div.tooltip {
 #playControls {
   height: 30px;
   margin-top: 4px;
-  margin-bottom: 20px;
+  margin-bottom: 28px;
 }
 
 #playButton {
